# nothing_project

./: .bash_history  .bashrc  .env  .gitignore  Dockerfile  aliases  aliases.sh  compose.yaml  run.sh  stop.sh
broker/: README
broker/mosquitto/: password_file
broker/mosquitto/config/: mosquitto.conf
client/: README  integration_test.py  restReadPublisMqtt.py  shared_urls.py  tests.py  weather.py
cuda/: CMakeLists.txt  main.cu
database/: README  integration_test.py
database/mysql_client/: Cargo.toml
database/mysql_client/src/: app.rs  client.rs  database.rs  forcast_provider.rs  integration_test.rs  logger.rs  logic.rs  main.rs  rest.rs  tests.rs
database/mysql_client/src/message_handler/: dummy_mqtt.rs  json_wheather.rs  mod.rs  mqtt.rs  shared_data.rs
database/mysql_client/src/types/: json_multisensor.rs  json_sun.rs  json_wheather.rs  mod.rs  shared_data.rs
database/tests/: run_tests.sh  tests.py
json-server/data/: db.json
run/: run.sh  stop.sh
user_data/git/: README  git_config_docker.sh
user_data/open_wheather/: README
