[package]
name = "mysql_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mysql = "25.0.0"
paho-mqtt = "0.12.3"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4.38"
log = "0.4"
env_logger = "=0.11.3"
futures = "0.3"
